--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-lock.yaml
-
+#hf_cache/
+hf_kyc_space/
 # Env/config files (secrets)
 .env
 .env.local
